syntax = "proto3";

option java_multiple_files = true;
option java_package = "via.sep3.dataserver.grpc";

service DataRetrievalService {
  rpc GetCourses (GetCoursesRequest) returns (GetCoursesResponse);
}
message GetCoursesRequest {

}
message GetCoursesResponse {
  repeated Course courses = 1;
}
message Course {
  int32 id = 1;
  string title = 2;
  string description = 3;
  string language = 4;
  string category = 5;
}

message GetLearningStepsRequest {

}
message GetLearningStepsResponse {
  repeated LearningStep learningSteps = 1;
}
message LearningStep {
  int32 id = 1;
  LearningStepType Type = 2
  LearningStepContent Content = 3
  int32 CourseId = 4
}